# FotP

./: .gitignore  AGENTS.md  proj_dir.db
.swarm-project/: bootstrap-manifest.json
Assets/: AssetList.txt  Gameflow.txt  todolist.txt
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
docs/: agent-memory-bootstrap.md  fotp-bugfix-plan.json  fotp-bugfix-plan.yaml  fotp-gameloop-plan.json  fotp-gameloop-plan.yaml  fotp-implementation-plan.json  (+17 more)
rust/ams-core-kernel/: Cargo.toml  README.md  RUST_CSHARP_ASYMMETRY_PLAN.md  SPRINT1_PARITY_GAPS.md  SPRINT8_CUTOVER_GAPS.md
rust/ams-core-kernel/src/: active_inference.rs  agent_pool.rs  agent_query.rs  atlas.rs  atlas_multi_scale.rs  bugreport.rs  cache.rs  callstack.rs  context.rs  corpus.rs  corpus_inspect.rs  dream.rs  dream_cluster.rs  dream_generate_md.rs  dream_shortcut.rs  fep_bootstrap.rs  fep_cache_signal.rs  freshness.rs  importer.rs  inspect.rs  invariants.rs  knowledge_entry.rs  lesson_retrieval.rs  lib.rs  log.rs  main.rs  model.rs  operator_inspect.rs  parity.rs  persistence.rs  policy.rs  projdir.rs  resolution.rs  retrieval.rs  retrieval_inspect.rs  route_memory.rs  route_replay.rs  search_cache.rs  session_gc.rs  shadow.rs  (+8 more)
rust/ams-core-kernel/src/swarm_dag/: mock_agents.rs  mod.rs  model.rs  orchestrator.rs
rust/ams-core-kernel/tests/: swarm_dag_test.rs
rust/ams-core-kernel/tests/fixtures/: agent-query-parity-cases.jsonl  agent-query-parity-route-replay.jsonl  smartlist-only.memory.ams.json  smartlist-only.memory.jsonl
(+655 files in other folders)
