[package]
name = "ams-core-kernel"
version = "0.1.0"
edition = "2021"
description = "Standalone Rust AMS.Core substrate kernel with snapshot replay and invariant validation."

[lib]
path = "src/lib.rs"

[[bin]]
name = "ams-core-kernel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4"] }
regex = "1.11"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.12"
